feat: add main's banner navbar album 's section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,77 @@
             <section class="banner">
                 <button class="x">EFFETTUA L'UPDGRADE</button>
             </section>
-           
+
+            <!--main navbar's section-->
+            <nav class="main-navbar gap-30">
+                <a href="x">IN EVIDENZA</a>
+                <a href="x">PODCAST</a>
+                <a href="x">CLASSIFICHE</a>
+                <a href="x">GENERI E MOOD</a>
+                <a href="x">NUOVE USCITE</a>
+                <a href="x">SCOPRI</a>
+            </nav>
+
+            <!--album's section-->
+            <section class="album">
+                <h3>Recently played</h3>
+                <div class="row">
+                    <div class="col">
+                        <div class="art">
+                            <img class="img-fluid" src="./img/metal_lifting.jpg" alt="metal covers">
+                        </div>
+                        <div class="title-album">
+                            <h4>Heavy Metal</h4>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="art">
+                            <img class="img-fluid" src="./img/stranger.jpeg" alt="stranger things cover">
+                        </div>
+                        <div class="title-album">
+                            <h4>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h4>
+                            <p>Kyle Dixon & Michael Stein</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="art">
+                            <img class="img-fluid" src="./img/aquietplace.jpeg" alt="a quiet place cover">
+                        </div>
+                        <div class="title-album">
+                            <h4>A quiet place</h4>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="art">
+                            <img class="img-fluid" src="./img/split.jpeg" alt="split cover">
+                        </div>
+                        <div class="title-album">
+                            <h4>Split</h4>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="art">
+                            <img class="img-fluid" src="./img/cure.jpeg" alt="cure cover">
+                        </div>
+                        <div class="title-album">
+                            <h4>A cure for wellness</h4>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="art">
+                            <img class="img-fluid" src="./img/sinister.jpeg" alt="sinister cover">
+                        </div>
+                        <div class="title-album">
+                            <h4>Sinister</h4>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 
