feat: add main's created and popular's sections

--- a/index.html
+++ b/index.html
@@ -140,6 +140,54 @@
                     </div>
                 </div>
             </section>
+
+            <!--created's section-->
+            <section class="created">
+                <h3>Creato per John Doe</h3>
+                <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+                <div class="row">
+                    <div class="col">
+                        <div class="art">
+                            <img class="img-fluid" src="./img/radar.jpeg" alt="radar cover">
+                        </div>
+                        <div class="title-album">
+                            <h4>Release Radar</h4>
+                        </div>
+                    </div>   
+                    <div class="col">
+                        <div class="art">
+                            <img class="img-fluid" src="./img/mixdaily.jpeg" alt="daily-mix cover">
+                        </div>
+                        <div class="title-album">
+                          <h4>Daily Mix 1</h4>
+                        </div>
+                    </div>
+                </div> 
+            </section>
+
+            <!--popular's section-->
+            <section class="popular">
+                <h3>Artisti più popolari</h3>
+                <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+                <div class="row">
+                    <div class="col">
+                        <div class="art">
+                            <img class="img-fluid" src="./img/youg.jpeg" alt="lana pic">
+                        </div>
+                        <div class="title-album">
+                            <h4>Lana Del Rey</h4>
+                        </div>
+                    </div>   
+                    <div class="col">
+                        <div class="art">
+                            <img class="img-fluid" src="./img/einaudi.jpeg" alt="einaudi pic">
+                        </div>
+                        <div class="title-album">
+                            <h4>Ludovico Einaudi</h4>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 
