--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <!--album's section-->
             <section class="album">
                 <h3>Recently played</h3>
-                <div class="row">
+                <div class="row gap-10">
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/metal_lifting.jpg" alt="metal covers">
@@ -145,7 +145,7 @@
             <section class="created">
                 <h3>Creato per John Doe</h3>
                 <p>Più ascolti, più accurati saranno i suggerimenti.</p>
-                <div class="row">
+                <div class="row gap-10">
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/radar.jpeg" alt="radar cover">
@@ -169,7 +169,7 @@
             <section class="popular">
                 <h3>Artisti più popolari</h3>
                 <p>Più ascolti, più accurati saranno i suggerimenti.</p>
-                <div class="row">
+                <div class="row gap-10">
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/youg.jpeg" alt="lana pic">
