feat: add header's first and second sections

--- a/index.html
+++ b/index.html
@@ -192,7 +192,44 @@
     </div>
 
     <footer>
-        
+        <div class="row">
+            <div class="song">
+                <div class="row gap-20">
+                    <div class="col">
+                        <img class="img-fluid" src="./img/player_left.jpg" alt="player album pic">
+                    </div>
+                    <div class="col">
+                        <h4>Sinister</h4>
+                        <p>Brano</p>
+                        <p>Nome</p>
+                    </div>
+                    <div class="col">
+                        <p><i class="fa-regular fa-heart"></i></p>
+                        <p><i class="fa-regular fa-folder"></i></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="player">
+                <nav class="col">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-regular fa-circle-play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-arrow-rotate-right"></i>
+                </nav>
+               <div class="col">
+                    <p>0:25</p>
+                    <p><hr class="song-bar"><!--<hr class="rep-song-bar">--></p>
+                    <p>4:35</p>
+               </div>
+            </div>
+
+            <div class="extra">
+              a  
+            </div>
+
+        </div>
     </footer>
 
 </body>
