--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
     <footer>
         <div class="row">
             <div class="song">
-                <div class="row gap-20">
+                <div class="row gap-10">
                     <div class="col">
-                        <img class="img-fluid" src="./img/player_left.jpg" alt="player album pic">
+                        <img class="img-fluid" src="./img/sinister.jpeg" alt="player album pic">
                     </div>
                     <div class="col">
                         <h4>Sinister</h4>
@@ -204,8 +204,8 @@
                         <p>Nome</p>
                     </div>
                     <div class="col">
-                        <p><i class="fa-regular fa-heart"></i></p>
-                        <p><i class="fa-regular fa-folder"></i></p>
+                        <div><i class="fa-regular fa-heart"></i></div>
+                        <div><i class="fa-regular fa-folder"></i></div>
                     </div>
                 </div>
             </div>
@@ -226,7 +226,10 @@
             </div>
 
             <div class="extra">
-              a  
+                <i class="fa-solid fa-list"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <p><hr class="volume-bar"></p>
             </div>
 
         </div>
