add: header's hover

--- a/index.html
+++ b/index.html
@@ -38,23 +38,24 @@
                 <div class="playlist">
                     <h3>PLAYLIST</h3>
                     <div>
-                    <button class="btn">+</button>
-                    <span>Crea Playlist</span>
+                        <button class="btn">+</button>
+                        <a href="x">Crea Playlist</a>
                     </div>
                     <ul>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
+                        <li><a href="x">Nome Playlist</a></li>
+                        <li><a href="x">Nome Playlist</a></li>
+                        <li><a href="x">Nome Playlist</a></li>
+                        <li><a href="x">Nome Playlist</a></li>
+                        <li><a href="x">Nome Playlist</a></li>
+                        <li><a href="x">Nome Playlist</a></li>
+                        <li><a href="x">Nome Playlist</a></li>
                     </ul>
                 </div>
            
             <!--header bottom's section-->    
             <div class="header-bottom">
                 <div class="download">
-                    <img src="./img/download.svg" alt="download"><span>Installa app</span>
+                    <img src="./img/download.svg" alt="download"><a href="x">Installa app</a>
                 </div>
                 <div class="user-profile">
                     <img src="./img/profile.svg" alt="profile-pic"><span>John Doe</span>
