feat: add text hover

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 
             <!--banner's section-->
             <section class="banner">
-                <button class="x">EFFETTUA L'UPDGRADE</button>
+                <button class="big-btn">EFFETTUA L'UPDGRADE</button>
             </section>
 
             <!--main navbar's section-->
             <nav class="main-navbar gap-30">
-                <a href="x">IN EVIDENZA</a>
+                <a href="x">IN EVIDENZA<hr></a>
                 <a href="x">PODCAST</a>
                 <a href="x">CLASSIFICHE</a>
                 <a href="x">GENERI E MOOD</a>
