feat: add first img hover (to fix)

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/metal_lifting.jpg" alt="metal covers">
+                            <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                         </div>
                         <div class="title-album">
                             <h4>Heavy Metal</h4>
@@ -221,7 +222,7 @@
                 </nav>
                <div class="col">
                     <p>0:25</p>
-                    <p><hr class="song-bar"><!--<hr class="rep-song-bar">--></p>
+                    <div><hr class="song-bar"><hr class="rep-song-bar"><hr class="circle"></div>
                     <p>4:35</p>
                </div>
             </div>
@@ -230,7 +231,7 @@
                 <i class="fa-solid fa-list"></i>
                 <i class="fa-solid fa-desktop"></i>
                 <i class="fa-solid fa-volume-high"></i>
-                <p><hr class="volume-bar"></p>
+                <div><hr class="volume-bar"><hr class="rep-song-bar"><hr class="circle"></div>
             </div>
 
         </div>
