--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/stranger.jpeg" alt="stranger things cover">
+                            <div class="play"><i class="fa-regular fa-circle-play"></i></div>
+
                         </div>
                         <div class="title-album">
                             <h4>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h4>
@@ -107,6 +109,7 @@
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/aquietplace.jpeg" alt="a quiet place cover">
+                            <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                         </div>
                         <div class="title-album">
                             <h4>A quiet place</h4>
@@ -116,6 +119,7 @@
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/split.jpeg" alt="split cover">
+                            <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                         </div>
                         <div class="title-album">
                             <h4>Split</h4>
@@ -125,6 +129,7 @@
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/cure.jpeg" alt="cure cover">
+                            <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                         </div>
                         <div class="title-album">
                             <h4>A cure for wellness</h4>
@@ -134,6 +139,7 @@
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/sinister.jpeg" alt="sinister cover">
+                            <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                         </div>
                         <div class="title-album">
                             <h4>Sinister</h4>
