fix: main navbar's ul

--- a/index.html
+++ b/index.html
@@ -72,13 +72,15 @@
             </section>
 
             <!--main navbar's section-->
-            <nav class="main-navbar gap-30">
-                <a href="x">IN EVIDENZA<hr></a>
-                <a href="x">PODCAST</a>
-                <a href="x">CLASSIFICHE</a>
-                <a href="x">GENERI E MOOD</a>
-                <a href="x">NUOVE USCITE</a>
-                <a href="x">SCOPRI</a>
+            <nav class="main-navbar">
+                <ul class="gap-30">
+                    <li><a href="x">IN EVIDENZA<hr></a></li>
+                    <li><a href="x">PODCAST</a></li>
+                    <li><a href="x">CLASSIFICHE</a></li>
+                    <li><a href="x">GENERI E MOOD</a></li>
+                    <li><a href="x">NUOVE USCITE</a></li>
+                    <li><a href="x">SCOPRI</a></li>
+                </ul>
             </nav>
 
             <!--album's section-->
