fix: padding elements and add hover playlist and artists

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/radar.jpeg" alt="radar cover">
+                            <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                         </div>
                         <div class="title-album">
                             <h4>Release Radar</h4>
@@ -166,6 +167,7 @@
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/mixdaily.jpeg" alt="daily-mix cover">
+                            <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                         </div>
                         <div class="title-album">
                           <h4>Daily Mix 1</h4>
@@ -182,6 +184,7 @@
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/youg.jpeg" alt="lana pic">
+                            <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                         </div>
                         <div class="title-album">
                             <h4>Lana Del Rey</h4>
@@ -190,6 +193,7 @@
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/einaudi.jpeg" alt="einaudi pic">
+                            <div class="play"><i class="fa-regular fa-circle-play"></i></div>
                         </div>
                         <div class="title-album">
                             <h4>Ludovico Einaudi</h4>
