fix: switch album, playlist and artists col'gap to padding

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <!--album's section-->
             <section class="album">
                 <h3>Recently played</h3>
-                <div class="row gap-10">
+                <div class="row">
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/metal_lifting.jpg" alt="metal covers">
@@ -154,7 +154,7 @@
             <section class="created">
                 <h3>Creato per John Doe</h3>
                 <p>Più ascolti, più accurati saranno i suggerimenti.</p>
-                <div class="row gap-10">
+                <div class="row">
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/radar.jpeg" alt="radar cover">
@@ -180,7 +180,7 @@
             <section class="popular">
                 <h3>Artisti più popolari</h3>
                 <p>Più ascolti, più accurati saranno i suggerimenti.</p>
-                <div class="row gap-10">
+                <div class="row">
                     <div class="col">
                         <div class="art">
                             <img class="img-fluid" src="./img/youg.jpeg" alt="lana pic">
